odoo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-svc
spec:
  ports:
  - port: 8069
  selector:
    app: odoo
